# iteration_utilities

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  .travis_c.yml  .travis_py.yml  LICENSE.rst  LICENSE.txt  MANIFEST.in  README.rst  appveyor.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/: CONTRIBUTING.rst  ISSUE_TEMPLATE.rst  PULL_REQUEST_TEMPLATE.rst
.github/workflows/: ci.yml  cpython-benchmarks.yml  cpython-coverage.yml  cpython.yml  pypy.yml  test.yml
benchmarks/accumulate/: accumulate.py  accumulate_binop.py
benchmarks/all_distinct/: all_distinct.py
benchmarks/all_equal/: all_equal.py
benchmarks/all_monotone/: all_monotone.py
benchmarks/applyfunc/: applyfunc.py
benchmarks/count_items/: count_items.py
benchmarks/deepflatten/: deepflatten.py
benchmarks/groupedby/: groupedby.py  groupedby_with_reduce.py
benchmarks/grouper/: grouper_n2.py  grouper_n50.py
benchmarks/intersperse/: intersperse.py
benchmarks/merge/: merge.py
benchmarks/roundrobin/: roundrobin.py
benchmarks/split/: split.py
benchmarks/successive/: successive_n2.py  successive_n50.py
benchmarks/unique_everseen/: unique_everseen_no_duplicates.py  unique_everseen_only_duplicates.py
benchmarks/unique_justseen/: unique_justseen.py
ci/: build-wheels-manylinux1.sh  build-wheels-manylinux2010.sh  build-wheels.sh  collect_benchmarks.py  run-py38.sh  verify_checksum.py
docs/: AUTHORS.rst  CHANGES.rst  Makefile  api.rst  callbacks.rst  conf.py  copy_iterators.rst  functools.rst  generators.rst  index.rst  installation.rst  iterable.rst  license.rst  make.bat  misc.rst  operators.rst  random.rst  reduce.rst  rtd-pip-requirements  shortcircuit.rst  tipps.rst
docs/api/: additional.rst  cfuncs.rst  cls.rst
docs/callbacks/: simplecallbacks.rst
docs/cfuncs/: cfuncs.rst
docs/helpers/: performance.rst
docs/recipes/: additional.rst  core.rst  py2_compat.rst
helper/: create_functions_table.py  git_clean_keep_ide_settings.py
iteration_utilities/: __init__.py  _additional_recipes.py  _c_funcs.py  _classes.py  _performant_helpers.py  _recipes.py  _utils.py  core.py
iteration_utilities/_helpers/: __init__.py  _performance.py
iteration_utilities/_private/: __init__.py  create_functions_table.py  create_method_lists.py
iteration_utilities/_recipes/: __init__.py  _additional.py  _core.py  _py2_compat.py
iteration_utilities/callbacks/: __init__.py
iteration_utilities/helpers/: __init__.py  performance.py
iteration_utilities/recipes/: __init__.py  additional.py  core.py  py2_compat.py
licenses/: LICENSE_PYTHON.rst
src/: _exported_helper.c  _globaldocs.c  _helper.c  _isx.c  _itemidxkey.c  _mathematical.c  _module.c  _placeholder.c  _returnx.c  _seen.c  accumulate.c  alldistinct.c  allequal.c  allisinstance.c  allmonotone.c  anyisinstance.c  applyfunc.c  argminmax.c  chained.c  clamp.c  complement.c  const.c  constant.c  countitems.c  deepflatten.c  dotproduct.c  duplicates.c  flip.c  groupedby.c  grouper.c  intersperse.c  iterexcept.c  merge.c  minmax.c  nth.c  one.c  packed.c  partial.c  partition.c  replicate.c  (+8 more)
src/iteration_utilities/: __init__.py  __init__.pyi  _additional_recipes.py  _additional_recipes.pyi  _classes.py  _classes.pyi  _compat.py  _convenience.py  _convenience.pyi  _iteration_utilities.pyi  _recipes.py  _recipes.pyi  (+2 more)
src_c/: _globaldocs.c  _helper.c  _helperitemidxkey.c  _itemidxkey.c  _module.c  _seen.c  allhelper.c  functionschained.c  functionscomplement.c  functionscompose.c  functionsconst.c  functionsflip.c  functionsnth.c  isx.c  mathematical.c  minmax.c  module.c  recipes.c  recipesaccumulate.c  recipesapplyfunc.c  recipesclamp.c  recipesdeepflatten.c  recipesduplicates.c  recipesgrouper.c  recipesintersperse.c  recipesiterexcept.c  recipesmerge.c  recipespartition.c  recipesroundrobin.c  recipessplit.c  recipessuccessive.c  recipestabulate.c  recipesuniqueever.c  recipesuniquejust.c  reduce.c  reducealldistinct.c  reduceallequal.c  reduceallmonotone.c  reduceargminmax.c  reducecount.c  (+14 more)
tests/: conftest.py  helper_cls.py  helper_doctest.py  helper_funcs.py  helper_leak.py  helper_pytest_monkeypatch.py  historical_accumulate.py  historical_all_equal.py  historical_applyfunc.py  historical_first_true.py  historical_grouper.py  historical_iter_except.py  historical_last_true.py  historical_merge.py  historical_minmax.py  historical_nth.py  historical_pairwise.py  historical_partition.py  historical_quantify.py  historical_roundrobin.py  historical_successive.py  historical_unique_everseen.py  historical_unique_justseen.py  test__c_funcs.py  test__docs.py  test__parse_arg_kwarg.py  test__python_cls.py  test__python_funcs.py  test_accumulate.py  test_alldistinct.py  test_allequal.py  test_allisinstance.py  test_allmonotone.py  test_always_iterable.py  test_anyisinstance.py  test_applyfunc.py  test_argminmax.py  test_chained.py  test_clamp.py  test_complement.py  (+39 more)
(+118 files in other folders)
