[metadata]
name = iteration_utilities
description = Utilities based on Pythons iterators and generators.
long_description = file: README.rst
keywords = functional, functools, generator, itertools, iteration, iterator, operators, performance, reduce, utility
license = Apache License Version 2.0
platforms = Windows, Linux, Mac OS-X
url = https://github.com/MSeifert04/iteration_utilities
author = Michael Seifert
author_email = michaelseifert04@yahoo.de
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities

[options]
tests_require = pytest
include_package_data = True
zip_safe = False
packages = find:


[tool:pytest]
addopts = --doctest-glob='docs/*.rst' --ignore='setup.py'
testpaths = tests docs


[coverage:run]
branch = True
omit =
    setup.py
    tests/*

[coverage:report]
show_missing = true
precision = 2


[build_sphinx]
source-dir = docs/
build-dir  = build/sphinx/
all_files  = 1
