[metadata]
name = iteration_utilities
description = Utilities based on Pythons iterators and generators.
long_description = file: README.rst
keywords = functional, functools, generator, itertools, iteration, iterator, operators, performance, reduce, utility
license = Apache License Version 2.0
platforms = Windows, Linux, Mac OS-X
url = https://github.com/MSeifert04/iteration_utilities
author = Michael Seifert
author_email = michaelseifert04@yahoo.de
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities

[options]
python_requires = >=3.5
tests_require = pytest
zip_safe = False
setup_requires = setuptools

[options.extras_require]
test = pytest
doc = sphinx; numpydoc
all = pytest; sphinx; numpydoc


[tool:pytest]
addopts = --doctest-glob='docs/*.rst' --ignore='setup.py'
testpaths = tests docs


[coverage:run]
branch = True
omit =
    setup.py
    tests/*
    *_iteration_utilities*

[coverage:report]
show_missing = true
precision = 2
